--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
-
 *{
     padding: 0;
     margin: 0;
@@ -79,4 +78,43 @@ ul li::after{
 }
 ul li:hover::after{
     width: 50%;
+}
+#IMMERSIVE{
+width: 80%;
+margin: 60px 0;
+}
+#IMMERSIVE h1{
+    border: 3px solid var(--White);
+    width: 50%;
+    padding: 1rem 2rem;
+    font-family: var(--ff-josefin);
+    font-size: 3.3rem;
+    font-weight: 300;
+    color: var(--White);
+    word-wrap: break-word;
+}
+@media (max-width:768px) {
+    .container{
+        padding: 0 18px;
+        max-width: 1100px;
+    }
+    ul{
+        display: none;
+    }
+    #hamburger-icon{
+        display: block;
+    }
+  header{
+  background-image: url("assets/mobile/Image20251022205319.jpg");
+    min-height: 40rem;
+    
+  }
+  #IMMERSIVE{
+    width: 100%;
+    margin: 100px 0 0 0;
+  }
+#IMMERSIVE h1{
+    width: 100%;
+    font-size: 2.5rem;
+}
 }
