--- a/style.css
+++ b/style.css
@@ -93,6 +93,28 @@ margin: 60px 0;
     color: var(--White);
     word-wrap: break-word;
 }
+main{
+    padding: 100px 0;
+}
+#interactive-mobile{
+    display: none;
+}
+#section-1{
+    position: relative;
+}
+#text-div{
+    position: absolute;
+    left: 650px;
+    bottom: 4px;
+    background-color: var(--White);
+    height: 300px;
+    max-width: 50%;
+    padding: 20px 60px 0 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    word-wrap: break-word;
+}
 @media (max-width:768px) {
     .container{
         padding: 0 18px;
@@ -107,7 +129,6 @@ margin: 60px 0;
   header{
   background-image: url("assets/mobile/Image20251022205319.jpg");
     min-height: 40rem;
-    
   }
   #IMMERSIVE{
     width: 100%;
@@ -115,6 +136,5 @@ margin: 60px 0;
   }
 #IMMERSIVE h1{
     width: 100%;
-    font-size: 2.5rem;
-}
+    font-size: 2.5rem;}
 }
