imgs in the 3rd section

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 --Grey-200: hsl(0, 0%, 85%);
 --ff-alata: "Alata", sans-serif;
 --ff-josefin: "Josefin Sans", sans-serif;
-}
+}z
 ul{
     list-style: none;
 }
@@ -116,14 +116,13 @@ main{
     justify-content: end;
     word-wrap: break-word;
    
-}
-#div-for-creations{
+}.div-for-creations{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 
 }
-#div-for-creations h1{
+.div-for-creations h1{
     font-family: var(--ff-josefin);
     font-weight: 300;
     font-size: 2rem;
@@ -145,14 +144,14 @@ main{
 #section-2{
 padding-top: 140px;
 }
-#div-for-creations button{
+.div-for-creations button{
     border: 1px solid var(--Black);
     padding: 10px 50px;
     letter-spacing: 4px;
     font-weight: 400;
     font-family: var(--ff-alata);
 }
-#div-for-creations button:hover{
+.div-for-creations button:hover{
     cursor: pointer;
     background-color: var(--Black);
     color: var(--White);
@@ -162,21 +161,18 @@ padding-top: 140px;
     grid-template-columns: repeat(4,1fr);
     gap: 1.4rem;
     padding: 60px 0;
-   
-
 }
 .creation-card{
     height: 500px;
     display: flex;
     align-items: flex-end;
     padding: 1rem;
-    font-family: var(--ff-alata);
+    font-family: var(--ff-josefin);
     color: var(--White);
     font-weight: 400;
     text-transform: uppercase;
     background-repeat: no-repeat;
     background-size: cover;  
-    
 }
 #deep-earth{
     background-image: url(assets/desktop/Image20251008202448.jpg);
@@ -214,6 +210,20 @@ padding-top: 140px;
     padding-left: 30px;
     max-width: 60%;
 }
+#mobile-btn{
+    display: none;
+}
+footer{
+    background-color: var(--Black);
+    padding: 50px 0;
+}
+#footer-inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    color: var(--White);
+}
 @media (max-width:768px) {
     .container{
         padding: 0 18px;
@@ -236,8 +246,6 @@ padding-top: 140px;
 #IMMERSIVE h1{
     width: 100%;
     font-size: 2.5rem;}
-
-
 /* main */
 #interactive-mobile{
     display: block;
@@ -254,31 +262,26 @@ padding-top: 140px;
 }
 #text-div h1{
     font-size: 2.4rem;
-
 }
 #text-div p{
 padding-top: 20px;
 line-height: 1.6;
 }
- 
 #desktop-btn{
     display: none;
 }
 #section-2{
     padding-top: 60px;
 }
-#div-for-creations{
+.div-for-creations{
     justify-content: center;
 }
 /* grid */
-#creations-grid{
-  
+#creations-grid{  
     grid-template-columns: 1fr;
-   
 }
 #deep-earth{
     background-image: url(assets/mobile/Image20251008202313.jpg);
-   
 }
 #night-arcade{
     background-image: url(assets/mobile/Image20251008202252.jpg);
@@ -313,7 +316,9 @@ line-height: 1.6;
 .creation-card p{
     max-width: 31%;
     padding-left:0 ;
-    font-size: 1.3rem;
-   
+    font-size: 1.3rem;  
+}
+#mobile-btn{
+    display: block;
 }
 }
