--- a/style.css
+++ b/style.css
@@ -232,13 +232,15 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-right: 10px;
 }
 #copyright{
     font-family: var(--ff-josefin);
     font-weight: 400;
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: 20px;
 }
+
 @media (max-width:768px) {
     .container{
         padding: 0 18px;
